# sylens

./: .gitignore  .tm_properties  Makefile  Makefile.lin  Makefile.mac  Makefile64.mac  Manual.html  README.html  README.markdown  README.txt  SyLens.cpp  SyLens_Figures.ai  init.py  menu.py  rapidTest.sh  sample.nk  sy_LensUndistort.cpp  sylens.py
images/: SyLens_Figures.ai
plugins-64/mac-10/: SyCamera.dylib  SyGeo.dylib  SyLens.dylib  SyShader.dylib  SyUV.dylib
plugins-64/mac-6/: SyCamera.dylib  SyGeo.dylib  SyLens.dylib  SyShader.dylib  SyUV.dylib
plugins-64/mac-7/: SyCamera.dylib  SyGeo.dylib  SyLens.dylib  SyShader.dylib  SyUV.dylib
plugins-64/mac-8/: SyCamera.dylib  SyGeo.dylib  SyLens.dylib  SyShader.dylib  SyUV.dylib
plugins-64/mac-9/: SyCamera.dylib  SyGeo.dylib  SyLens.dylib  SyShader.dylib  SyUV.dylib
sample_scripts/: SyShader_example.nk  sample.nk
src/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  Disto_16mm_v03.lni  Makefile.Nuke10.mac  Makefile.Nuke7.lin  Makefile.Nuke7.mac  Makefile.Nuke8.mac  Makefile.Nuke9.mac  Makefile.lin  Makefile.mac  SyCamera.cpp  SyDistorter.cpp  SyDistorter.h  SyGeo.cpp  SyLens.cpp  SyShader.cpp  SyUV.cpp  VERSION.h  create_readme.rb  quicktest  quicktest-nuke-7  sampleLens.lni
src/cmake/: FindNuke.cmake
sylens-311/plugins-64/mac-9/: SyCamera.dylib  SyGeo.dylib  SyLens.dylib  SyShader.dylib  SyUV.dylib
